# RStats2017

./: CMakeLists.txt  README.md
cmake/: build.cmake  flags.cmake
common/contrib/basic_excel/: CMakeLists.txt
common/contrib/basic_excel/src/: BasicExcel.cpp
common/contrib/mini_excel/: .gitignore  .gitmodules  CMakeLists.txt  LuaMiniExcel.cpp  LuaMiniExcel.def  MiniExcelReader.cpp  MiniExcelReader.h  README.md  test.cpp  test.lua
common/contrib/mini_excel/minizip/: ioapi.c  unzip.c  zip.c
common/contrib/mini_excel/minizip/aes/: aestab.c
common/contrib/minizip/: CMakeLists.txt
common/contrib/rounding_algorithms/: rounding_algorithms.hpp
common/contrib/tiny-process/: .travis.yml  CMakeLists.txt  LICENSE  README.md  process_win.cpp
common/contrib/xlnt/: CMakeLists.txt
common/contrib/xlreader/: COPYRIGHT  biff.h  book.c  book.h  cell.c  cell.h  format.c  format.h  formatting.c  formatting.h  handler.c  handler.h  interger.c  interger.h  main.c  record.c  record.h  sheet.c  sheet.h  sstlist.c  sstlist.h  test.c
common/contrib/xlsxwriter/: CMakeLists.txt
common/contrib/xlsxwriter/contrib/minizip/: iowin32.h
common/contrib/zlib/: CMakeLists.txt
common/contrib/zlib/src/: zlib.c
common/utility/: CMakeLists.txt  README.md
common/utility/inc/: Color.h  ColorFactory.h  ColorLoop.h  ColorUtils.h  ColorUtils.hpp  DateEntity.h  DateTimeUtils.hpp  DateUtils.hpp  Exception.hpp  FileUtils.hpp  Font.h  FontFactory.h  FontUtils.h  ObjectList.hpp  Random.h  StringUtils.hpp  SystemUtils.hpp  TimeEntity.h  TimeUtils.hpp  UtilityCommon.hpp  VBRoundUtils.hpp  (+3 more)
licenses/: CBTek-License.txt
products/GooeyFi/gooeyfi_launcher/: CMakeLists.txt
products/GooeyFi/gooeyfi_launcher/inc/: UIGooeyFiApp.hpp  UIGooeyFiAppFactory.h
products/GooeyFi/gooeyfi_launcher/inc/platform/imgui/: UIGooeyFiAppImgui.h
products/GooeyFi/gooeyfi_launcher/inc/platform/qt/: UIGooeyFiAppQt.h  UIGooeyFiAppQtWidget.h
products/GooeyFi/gooeyfi_launcher/src/: UIGooeyFiAppFactory.cpp
products/GooeyFi/gooeyfi_launcher/src/platform/imgui/: UIGooeyFiAppImgui.cpp  imgui_impl_glfw.cpp
products/GooeyFi/gooeyfi_launcher/src/platform/qt/: UIGooeyFiAppQt.cpp  UIGooeyFiAppQtWidget.cpp  UIGooeyFiAppQtWidget.cpp.autosave  UIGooeyFiAppQtWidget.ui
products/RAT-STATS/: CMakeLists.txt
products/RAT-STATS/rstats_modules/unrestricted_variable_appraisal/: CMakeLists.txt
products/RAT-STATS/rstats_modules/unrestricted_variable_appraisal/inc/: RStatsUVA.h  RStatsUVASessionData.h  UIRStatsUVA.h
products/RAT-STATS/rstats_modules/unrestricted_variable_appraisal/src/: RStatsUVA.cpp  RStatsUVASessionData.cpp  UIRStatsUVA.cpp  UIRStatsUVA.ui  main.cpp
products/RAT-STATS/rstats_utils/: CMakeLists.txt
products/RAT-STATS/rstats_utils/inc/: RStatsConditionLogger.h  RStatsDataFileParser.h  RStatsModuleProperties.h  RStatsModuleProperties.h.Ek5004  RStatsModuleSessionData.hpp  RStatsModuleSessionDataImpl.h  RStatsObjectList.hpp  RStatsScriptProviderProperties.h  RStatsSettingsManager.h  RStatsTypes.hpp  RStatsUtils.hpp  RStatsWorkbook.h  RStatsWorkbookStream.hpp  RStatsWorkbookStreamFactory.h  RStatsWorksheet.h
products/RAT-STATS/rstats_utils/inc/streams/: RStatsAccessWorkbookStream.h  RStatsCSVWorkbookStream.h  RStatsDIFWorkbookStream.h  RStatsDelimitedWorkbookStream.h  RStatsSpaceOrTabDelimitedWorkbookStream.h  RStatsXLSWorkbookStream.h  RStatsXLSXWorkbookStream.h
products/RAT-STATS/rstats_utils/src/: RStatsConditionLogger.cpp  RStatsDataFileParser.cpp  RStatsModuleProperties.cpp  RStatsModuleSessionDataImpl.cpp  RStatsScriptProviderProperties.cpp  RStatsSettingsManager.cpp  RStatsWorkbook.cpp  RStatsWorkbookStreamFactory.cpp  RStatsWorksheet.cpp
products/RAT-STATS/rstats_utils/src/streams/: RStatsAccessWorkbookStream.cpp  RStatsCSVWorkbookStream.cpp  RStatsDIFWorkbookStream.cpp  RStatsDelimitedWorkbookStream.cpp  RStatsSpaceOrTabDelimitedWorkbookStream.cpp  RStatsXLSWorkbookStream.cpp  RStatsXLSXWorkbookStream.cpp
products/RAT-STATS/rstats_utils/tests/: CMakeLists.txt
products/RAT-STATS/rstats_utils/tests/src/: test_RStatsUtils.cpp  test_RStatsWorkbookStreams.cpp  test_RStatsWorksheet.cpp
products/ROCKET-STATS/: CMakeLists.txt
products/ROCKET-STATS/rstats_utils/: CMakeLists.txt
products/ROCKET-STATS/rstats_utils/inc/: RStatsConditionLogger.h  RStatsModuleProperties.h  RStatsModuleSessionData.hpp  RStatsModuleSessionDataImpl.h  RStatsObjectList.hpp  RStatsScriptProviderProperties.h  RStatsTypes.hpp  RStatsUtils.hpp  RStatsWorkbook.h  RStatsWorkbookStream.hpp  RStatsWorkbookStreamFactory.h  RStatsWorksheet.h
products/ROCKET-STATS/rstats_utils/inc/streams/: RStatsCSVWorkbookStream.h  RStatsDIFWorkbookStream.h  RStatsSpaceOrTabDelimitedWorkbookStream.h  RStatsXLSWorkbookStream.h  RStatsXLSXWorkbookStream.h
products/ROCKET-STATS/rstats_utils/src/: RStatsConditionLogger.cpp  RStatsModuleProperties.cpp  RStatsModuleSessionDataImpl.cpp  RStatsScriptProviderProperties.cpp  RStatsWorkbook.cpp  RStatsWorkbookStreamFactory.cpp  RStatsWorksheet.cpp
products/ROCKET-STATS/rstats_utils/src/streams/: RStatsCSVWorkbookStream.cpp  RStatsDIFWorkbookStream.cpp  RStatsSpaceOrTabDelimitedWorkbookStream.cpp  RStatsXLSWorkbookStream.cpp  RStatsXLSXWorkbookStream.cpp
products/ROCKET-STATS/rstats_utils/tests/src/: test_RStatsUtils.cpp  test_RStatsWorkbookStreams.cpp  test_RStatsWorksheet.cpp
products/test_TeamCBTek/: CMakeLists.txt  Makefile  cmake_install.cmake
sdk/: SDK FAQ.odt
sdk/contrib/: Single Stage Random Numbers Output Requirements.docx  TODO.docx
submission/: rstats_overview.odp  rstats_readme.odp
submission/first_draft_results/: CBTek_RuleChecklist_12js.xlsx  Issues.txt
submission/rstats_help/: rstats_contrib.odp  rstats_development.odp  rstats_differences.odp  rstats_example_comparisons.odp  rstats_module_extensions.odp  rstats_ssrn.odp  rstats_sva.odp  rstats_uaa.odp  rstats_users_guide.odp  rstats_uva.odp
submission/rstats_source/: CMakeLists.txt
submission/rstats_source/products/RAT-STATS/rstats_main/: CMakeLists.txt
submission/rstats_source/products/RAT-STATS/rstats_main/src/: UIRStatsMain.cpp
(+514 files in other folders)
